--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,14 @@
 *.lai
 *.la
 *.a
+
+CMakeCache.txt
+CMakeFiles/
+Makefile
+Debug/
+bin/*
+.project
+.cproject
+cmake.sh
+cmake_install.cmake
+install_manifest.txt
