--- a/zombieland/CMakeLists.txt
+++ b/zombieland/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SRC zombieland.cpp entity.cpp factory.cpp graph.cpp utils.cpp object.cpp obstacle.cpp)
+set(SRC zombieland.cpp entity.cpp factory.cpp graph.cpp utils.cpp object.cpp obstacle.cpp vector.cpp)
 
 add_library(libzombieland STATIC ${SRC}) # or SHARED
 
